# DeepCerebra-connector

./: README.md  pyproject.toml  requirements.txt
dcc_bridge/: __init__.py  __main__.py  backends.py  connector.py  local_exec.py
tests/: test_local_exec.py
